--- a/TODO.txt
+++ b/TODO.txt
@@ -1,35 +1,57 @@
-People and projects to search for on Github:
-Torben Mogensen
-Michael Feathers
-Steve Freeman
-Nat Pryce
-John Tromp
-Freek Wiedijk (Automath)
-Fabrice Bellard (QEMU, jslinux, tcc)
-IOCCC
-Steven Skiena
+Searched:
 Don Libes
-Richard Hipp
+* expect
 DrPetter
+* sfxr
+* musagi
+IOCCC
+John Tromp
+* Fhourstones connect four benchmark
+* ioccc maze
+* ioccc tetris
+* the lazy-k language
+Michael Feathers
+* CppUnitLite
+Richard Hipp
+Steve Freeman
+Steven Skiena
+Torben Mogensen
+* Nicolas Devillard and the fast median search
+* Basics of Compiler Design
+Freek Wiedijk
+* Automath
+* Coq
+Farbrausch
+* kkrunchy
+* werkkzeug?
+David Cope
+* Emmy / EMI / Emily Howell
 Benjamin Pierce
+* Pict
+* Unison
+* TAPL
+
+People and projects to search for on Github:
 Van Noord (FSATools)
 Peter Clark's TaleSpin
 Mark Miller
+Marc Stiegler (capability security, David's Sling, and Earthweb)
 Robin Hanson (market scoring rule)
 Steven Ganz (trampolined interpreter)
 Lennart Augustsson
-Russ Cox
+Russ Cox (did he have a regexp automata library?)
 Doug McIlroy
 Diomadis Spinellis
 ncurses
 cairo
+agg (Maxim Shemanarev)
 haru
 partial evaluation
 curry howard isomorphism
 nesC
 cec / esterel
 love
-tame/tamer
+tame/tamer and those okcupid guys
 the CMAes optimization evolutionary strategy
 VeryTinyProlog
 Ken Kahn's Prolog-in-lisp
@@ -61,3 +83,36 @@ Andreas Zeller (delta debugging)
 Stephanie Weirich
 Melanie Mitchell
 gtk-server
+Andrej Bauer
+Michael Feathers
+* Maybe depend.sh, churn metrics, Vise
+Steve Freeman and Nat Pryce
+* Growing Object Oriented Software
+concordance
+Olin Shivers
+Olivier Danvy
+Oleg Kiselyov
+Daniel Friedman
+nulkukel (haskell irc bot)
+geordi (C++ irc bot)
+a tiny occam compiler / interpreter?
+Chris Pressey
+John Tromp and the gecode constraint solver?
+djb
+fishwick's simpack
+Fabrice Bellard
+* lzexe
+* tcc
+* ffmpeg
+* qemu and jslinux
+icfp
+John Ousterhout (tcl/tk)
+lua (roberto and iup and mike pall's luajit)
+bond graphs
+petri nets
+ludum dare
+the auto-compose tool from ludum dare
+other demoscene groups? rgba?
+Kragen Sitaker
+* torus
+* bicycleta
