The mysteryfcm ai repository is damn awesome.

--- a/TODO.txt
+++ b/TODO.txt
@@ -255,3 +255,5 @@ cellular automata
 * abstract circuits / machines that can be ported from one rule to another easily
 * ferociously partially-evaluating a rule and a pattern, to the point where a register machine implemented in wireworld becomes something like C code manipulating registers
 automatic differentiation
+the mysteryfcm treasure trove:chris.mysteryfcm.co.uk/?f=
+
