Some rete stuff I ran into on the web

--- a/TODO.txt
+++ b/TODO.txt
@@ -194,6 +194,9 @@ Soar
 * Rete/UL
 ** Doorenbos
 ** Expergent (code.google.com/p/expergent)
+** pychinko
+** cwm
+** cwmclone
 Andrew Appel
 * Rogomatic
 * Compiling with Continuations
