I should really study ROSE, it seems powerful and source-to-source transformations are cool.

--- a/TODO.txt
+++ b/TODO.txt
@@ -249,4 +249,5 @@ general game playing
 * code.google.com/p/ggp-galaxy
 rl-glue
 Ken Thompson's regular expression search algorithm
+ROSE / librose, a source-to-source transformation project/tool/library
 
